# imguiraylib-game

./: .gitignore  CMakeLists.txt  jetgame_plan.xlsx
assets/graphs/: bullet_graph.json  chasecam_graph.json  demo_fountain.json  enemy_bullet_graph.json  enemy_graph.json  flight_graph.json  flight_sim_graph.json  gamemanager_graph.json  gun_graph.json  main_graph.json  spin_graph.json  terrain_graph.json  turn_graph.json
assets/scenes/: FightTest.json  FlightTest.json  main.json
assets/scripts/: bullet.lua  chasecam.lua  demo_fountain.lua  enemy.lua  enemy_bullet.lua  flight.lua  flight_sim.lua  gamemanager.lua  generated.lua  gun.lua  keyboardmovement.lua  moveforwardlua.lua  myscript.lua  spin.lua  terrain.lua
assets/shaders/: skybox.fs  skybox.vs
cmake/: patch_imgui_node_editor.cmake
src/editor/: ScriptGraph.cpp  ScriptGraph.h  main.cpp
src/engine/: Application.cpp  Application.h  Component.h  Components.cpp  Components.h  FileDialog.cpp  FileDialog.h  Scene.cpp  Scene.h
